--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule ".Libplanet"]
 	path = .Libplanet
-	url = https://gitlab.virtuosgames.com/ninechronicles/libplanet.git
+	url = https://github.com/planetarium/libplanet.git
