--- a/Lib9c.MessagePack/Lib9c.MessagePack.csproj
+++ b/Lib9c.MessagePack/Lib9c.MessagePack.csproj
@@ -4,16 +4,10 @@
     <TargetFramework>net6.0</TargetFramework>
     <Nullable>enable</Nullable>
     <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
-    <Configurations>Debug;Release;Debug DevEx</Configurations>
+    <Configurations>Debug;Release</Configurations>
     <Platforms>AnyCPU</Platforms>
     <OutputPath>.bin</OutputPath>
     <IntermediateOutputPath>.obj</IntermediateOutputPath>
-  </PropertyGroup>
-
-  <PropertyGroup Condition=" '$(Configuration)' == 'Debug DevEx' ">
-    <DebugSymbols Condition=" '$(DebugSymbols)' == '' ">true</DebugSymbols>
-    <Optimize Condition=" '$(Optimize)' == '' ">false</Optimize>
-    <DefineConstants>TRACE;LIB9C_DEV_EXTENSIONS</DefineConstants>
   </PropertyGroup>
 
   <ItemGroup>
@@ -27,10 +21,6 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Lib9c\Lib9c.csproj" />
-  </ItemGroup>
-
-  <ItemGroup Condition=" '$(Configuration)' == 'Debug DevEx' ">
-    <ProjectReference Include="..\Lib9c.DevExtensions\Lib9c.DevExtensions.csproj" />
   </ItemGroup>
 
 </Project>
