--- a/Lib9c/Lib9c.csproj
+++ b/Lib9c/Lib9c.csproj
@@ -10,11 +10,25 @@
     <RootNamespace>Nekoyume</RootNamespace>
     <LangVersion>8</LangVersion>
     <EnableDynamicLoading>true</EnableDynamicLoading>
+    <Configurations>Debug;Release;Debug DevEx</Configurations>
+    <Platforms>AnyCPU</Platforms>
+  </PropertyGroup>
+
+  <PropertyGroup Condition=" '$(Configuration)' == 'Debug DevEx' ">
+    <DebugSymbols Condition=" '$(DebugSymbols)' == '' ">true</DebugSymbols>
+    <Optimize Condition=" '$(Optimize)' == '' ">false</Optimize>
+    <NoWarn>$(NoWarn);S3459</NoWarn>
   </PropertyGroup>
 
   <ItemGroup>
     <Compile Include="..\BTAI\*.cs" />
   </ItemGroup>
+
+  <ItemGroup Condition="'$(Configuration)' == 'Debug DevEx' ">
+    <Compile Include="..\Lib9c.DevExtensions\**\*.cs"
+             Exclude="..\Lib9c.DevExtensions\.*\**\*.cs"/>
+  </ItemGroup>
+
   <ItemGroup>
     <PackageReference Include="DecimalMath.DecimalEx" Version="1.0.2" />
     <PackageReference Include="OptimizedPriorityQueue" Version="4.2.0" />
@@ -25,6 +39,12 @@
     </PackageReference>
     <PackageReference Include="System.Reactive" Version="4.3.2" />
     <PackageReference Include="CsvHelper" Version="15.0.5" />
+  </ItemGroup>
+
+  <ItemGroup Condition=" '$(Configuration)' == 'Debug DevEx' ">
+    <PackageReference Include="Cocona.Core" Version="1.5.0"/>
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.1"/>
+    <PackageReference Include="Serilog.Sinks.Console" Version="4.0.1"/>
   </ItemGroup>
 
   <ItemGroup>
@@ -38,6 +58,10 @@
       <!-- https://github.com/dotnet/roslyn/issues/18093#issuecomment-405702631 -->
     </ProjectReference>
     <ProjectReference Include="..\Lib9c.Abstractions\Lib9c.Abstractions.csproj" />
+  </ItemGroup>
+
+  <ItemGroup Condition=" '$(Configuration)' == 'Debug DevEx' ">
+    <ProjectReference Include="..\.Libplanet\Libplanet.RocksDBStore\Libplanet.RocksDBStore.csproj"/>
   </ItemGroup>
 
 </Project>
