--- a/.Lib9c.Tests/Lib9c.Tests.csproj
+++ b/.Lib9c.Tests/Lib9c.Tests.csproj
@@ -9,7 +9,7 @@
     <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
     <NoWarn>$(NoWarn);CS0162;CS8032;CS0618;CS0612;SYSLIB0011</NoWarn>
     <CodeAnalysisRuleSet>.\Lib9c.Tests.ruleset</CodeAnalysisRuleSet>
-    <Configurations>Debug;Release;Debug DevEx</Configurations>
+    <Configurations>Debug;Release;DevEx</Configurations>
     <Platforms>AnyCPU</Platforms>
   </PropertyGroup>
 
@@ -17,7 +17,7 @@
     <TargetFramework>net6.0</TargetFramework>
   </PropertyGroup>
 
-  <PropertyGroup Condition=" '$(Configuration)' == 'Debug DevEx' ">
+  <PropertyGroup Condition=" '$(Configuration)' == 'DevEx' ">
     <DebugSymbols Condition=" '$(DebugSymbols)' == '' ">true</DebugSymbols>
     <Optimize Condition=" '$(Optimize)' == '' ">false</Optimize>
   </PropertyGroup>
@@ -51,9 +51,9 @@
     <ProjectReference Include="..\Lib9c.MessagePack\Lib9c.MessagePack.csproj" />
   </ItemGroup>
 
-  <ItemGroup Condition=" '$(Configuration)' != 'Debug DevEx' ">
+  <ItemGroup Condition=" '$(Configuration)' != 'DevEx' ">
     <!-- NOTE: Lib9c.DevExtensions project will be contained by Lib9c project
-               when the configuration is 'Debug DevEx'.-->
+               when the configuration is 'DevEx'.-->
     <ProjectReference Include="..\Lib9c.DevExtensions\Lib9c.DevExtensions.csproj" />
   </ItemGroup>
 
