--- a/.Lib9c.Tools/Lib9c.Tools.csproj
+++ b/.Lib9c.Tools/Lib9c.Tools.csproj
@@ -4,17 +4,15 @@
         <OutputType>Exe</OutputType>
         <TargetFramework>net6.0</TargetFramework>
         <AssemblyName>9c-tools</AssemblyName>
-        <Configurations>Debug;Release;Debug DevEx</Configurations>
+        <Configurations>Debug;Release;DevEx</Configurations>
         <Platforms>AnyCPU</Platforms>
     </PropertyGroup>
 
-    <PropertyGroup Condition="
-      '$([System.Runtime.InteropServices.RuntimeInformation]::
-        OSArchitecture.ToString())' == 'Arm64' ">
+    <PropertyGroup Condition="&#xA;      '$([System.Runtime.InteropServices.RuntimeInformation]::&#xA;        OSArchitecture.ToString())' == 'Arm64' ">
       <TargetFramework>net6.0</TargetFramework>
     </PropertyGroup>
 
-    <PropertyGroup Condition=" '$(Configuration)' == 'Debug DevEx' ">
+    <PropertyGroup Condition=" '$(Configuration)' == 'DevEx' ">
       <DebugSymbols Condition=" '$(DebugSymbols)' == '' ">true</DebugSymbols>
       <Optimize Condition=" '$(Optimize)' == '' ">false</Optimize>
     </PropertyGroup>
@@ -24,9 +22,9 @@
       <ProjectReference Include="..\Lib9c\Lib9c.csproj" />
     </ItemGroup>
 
-  <ItemGroup Condition=" '$(Configuration)' != 'Debug DevEx' ">
+  <ItemGroup Condition=" '$(Configuration)' != 'DevEx' ">
     <!-- NOTE: Lib9c.DevExtensions project will be contained by Lib9c project
-             when the configuration is 'Debug DevEx'.-->
+             when the configuration is 'DevEx'.-->
     <ProjectReference Include="..\Lib9c.DevExtensions\Lib9c.DevExtensions.csproj" />
   </ItemGroup>
 
