--- a/Lib9c/Lib9c.csproj
+++ b/Lib9c/Lib9c.csproj
@@ -10,11 +10,11 @@
     <RootNamespace>Nekoyume</RootNamespace>
     <LangVersion>8</LangVersion>
     <EnableDynamicLoading>true</EnableDynamicLoading>
-    <Configurations>Debug;Release;Debug DevEx</Configurations>
+    <Configurations>Debug;Release;DevEx</Configurations>
     <Platforms>AnyCPU</Platforms>
   </PropertyGroup>
 
-  <PropertyGroup Condition=" '$(Configuration)' == 'Debug DevEx' ">
+  <PropertyGroup Condition=" '$(Configuration)' == 'DevEx' ">
     <DebugSymbols Condition=" '$(DebugSymbols)' == '' ">true</DebugSymbols>
     <Optimize Condition=" '$(Optimize)' == '' ">false</Optimize>
     <NoWarn>$(NoWarn);S3459</NoWarn>
@@ -24,9 +24,8 @@
     <Compile Include="..\BTAI\*.cs" />
   </ItemGroup>
 
-  <ItemGroup Condition="'$(Configuration)' == 'Debug DevEx' ">
-    <Compile Include="..\Lib9c.DevExtensions\**\*.cs"
-             Exclude="..\Lib9c.DevExtensions\.*\**\*.cs"/>
+  <ItemGroup Condition="'$(Configuration)' == 'DevEx' ">
+    <Compile Include="..\Lib9c.DevExtensions\**\*.cs" Exclude="..\Lib9c.DevExtensions\.*\**\*.cs" />
   </ItemGroup>
 
   <ItemGroup>
@@ -41,14 +40,14 @@
     <PackageReference Include="CsvHelper" Version="15.0.5" />
   </ItemGroup>
 
-  <ItemGroup Condition=" '$(Configuration)' == 'Debug DevEx' ">
-    <PackageReference Include="Cocona.Core" Version="1.5.0"/>
-    <PackageReference Include="Newtonsoft.Json" Version="13.0.1"/>
-    <PackageReference Include="Serilog.Sinks.Console" Version="4.0.1"/>
+  <ItemGroup Condition=" '$(Configuration)' == 'DevEx' ">
+    <PackageReference Include="Cocona.Core" Version="1.5.0" />
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
+    <PackageReference Include="Serilog.Sinks.Console" Version="4.0.1" />
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\.Libplanet\Libplanet\Libplanet.csproj" >
+    <ProjectReference Include="..\.Libplanet\Libplanet\Libplanet.csproj">
       <Private>false</Private>
       <ExcludeAssets>runtime</ExcludeAssets>
     </ProjectReference>
@@ -60,8 +59,8 @@
     <ProjectReference Include="..\Lib9c.Abstractions\Lib9c.Abstractions.csproj" />
   </ItemGroup>
 
-  <ItemGroup Condition=" '$(Configuration)' == 'Debug DevEx' ">
-    <ProjectReference Include="..\.Libplanet\Libplanet.RocksDBStore\Libplanet.RocksDBStore.csproj"/>
+  <ItemGroup Condition=" '$(Configuration)' == 'DevEx' ">
+    <ProjectReference Include="..\.Libplanet\Libplanet.RocksDBStore\Libplanet.RocksDBStore.csproj" />
   </ItemGroup>
 
 </Project>
