--- a/Lib9c.DevExtensions/Lib9c.DevExtensions.csproj
+++ b/Lib9c.DevExtensions/Lib9c.DevExtensions.csproj
@@ -5,14 +5,6 @@
     <LangVersion>8</LangVersion>
     <OutputPath>.bin</OutputPath>
     <IntermediateOutputPath>.obj</IntermediateOutputPath>
-    <Configurations>Debug;Release;DevEx</Configurations>
-    <Platforms>AnyCPU</Platforms>
-  </PropertyGroup>
-
-  <PropertyGroup Condition=" '$(Configuration)' == 'DevEx' ">
-    <DebugSymbols Condition=" '$(DebugSymbols)' == '' ">true</DebugSymbols>
-    <Optimize Condition=" '$(Optimize)' == '' ">false</Optimize>
-    <NoWarn>$(NoWarn);CS0436</NoWarn>
   </PropertyGroup>
 
   <ItemGroup>
@@ -20,7 +12,7 @@
     <ProjectReference Include="..\.Libplanet\Libplanet.Stun\Libplanet.Stun.csproj" />
     <ProjectReference Include="..\.Libplanet\Libplanet\Libplanet.csproj" />
     <ProjectReference Include="..\Lib9c\Lib9c.csproj" />
-    <ProjectReference Include="..\Lib9c.Policy\Lib9c.Policy.csproj" />
+    <ProjectReference Include="..\.Lib9c.Tools\Lib9c.Tools.csproj" />
   </ItemGroup>
 
   <ItemGroup>
