send NineChronicles bump PR to upstream (license issue)

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -122,5 +122,5 @@ jobs:
         committer: >
           Submodule Updater <engineering+submodule-updater@planetariumhq.com>
         targets: |
-          ${{ github.repository_owner }}/NineChronicles:refs/heads/release/*
+          planetarium/NineChronicles:refs/heads/release/*
           ${{ github.repository_owner }}/NineChronicles.Headless:refs/heads/release/*
