--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -124,3 +124,4 @@ jobs:
         targets: |
           planetarium/NineChronicles:refs/heads/release/*
           ${{ github.repository_owner }}/NineChronicles.Headless:refs/heads/release/*
+          ${{ github.repository_owner }}/market-service:refs/heads/release/*
