[wip] add Lib9c.ActionBenchmarks project

--- a/.Lib9c.Benchmarks/Lib9c.Benchmarks.csproj
+++ b/.Lib9c.Benchmarks/Lib9c.Benchmarks.csproj
@@ -5,9 +5,7 @@
         <TargetFramework>net6.0</TargetFramework>
     </PropertyGroup>
 
-    <PropertyGroup Condition="
-      '$([System.Runtime.InteropServices.RuntimeInformation]::
-        OSArchitecture.ToString())' == 'Arm64' ">
+    <PropertyGroup Condition="&#xA;      '$([System.Runtime.InteropServices.RuntimeInformation]::&#xA;        OSArchitecture.ToString())' == 'Arm64' ">
       <TargetFramework>net6.0</TargetFramework>
     </PropertyGroup>
 
