ci: remove `Lib9c.StateService` publish

--- a/.github/workflows/lib9c_plugin_build_and_push_s3.yaml
+++ b/.github/workflows/lib9c_plugin_build_and_push_s3.yaml
@@ -1,6 +1,10 @@
 name: lib9c plugin build and push s3
 
 on:
+  push:
+    branches:
+      - development
+      - main 
   workflow_dispatch:
 
 jobs:
