Ignore lint: Stage prefix of world 8

--- a/_typos.toml
+++ b/_typos.toml
@@ -12,6 +12,7 @@ ba = "ba"  # byte array
 oce = "oce"  # OperationCanceledException
 ist = "ist"  # ItemSubType
 Equipments = "Equipments"  # FIXME: Equipment is noncount word but our team doesn't have the policy about it.
+Hel = "Hel"  # Stage prefix of world 8
 
 [files]
 extend-exclude = [
