--- a/.github/workflows/lib9c_plugin_build_and_push_s3.yaml
+++ b/.github/workflows/lib9c_plugin_build_and_push_s3.yaml
@@ -4,7 +4,8 @@ on:
   push:
     branches:
       - development
-      - main 
+      - main
+      - rc*
   workflow_dispatch:
 
 jobs:
@@ -22,7 +23,7 @@ jobs:
         with:
           dotnet-version: 6.0.400
       - name: Publish Lib9c.Plugin
-        run: dotnet publish ./.Lib9c.Plugin/Lib9c.Plugin.csproj -o out -r ${{ matrix.runtime }}
+        run: aws s3 cp ${{ matrix.runtime }}.zip s3://${{ vars.LIB9C_PLUGIN_S3_PATH }}/${{ github.sha }}/
       - name: Compress the build result
         run: zip -r ../${{ matrix.runtime }}.zip .
         working-directory: ./out
