--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -5,6 +5,8 @@ on:
     branches:
       - development
       - main
+    tags:
+      - "*.*.*"
 
 jobs:
   nuget:
@@ -41,3 +43,25 @@ jobs:
         fi
       env:
         NUGET_API_KEY: ${{ secrets.NUGET_API_KEY }}
+  jsr:
+    runs-on: ubuntu-latest
+    permissions:
+      contents: read
+      id-token: write
+    steps:
+      - uses: actions/checkout@v4
+      - uses: pnpm/action-setup@v3
+        with:
+          version: 8
+          run_install: true
+      - run: pnpm -r build
+      - name: choose version
+        working-directory: "@planetarium/lib9c"
+        run: |
+          if [[ ! "$GITHUB_REF" =~ ^refs/tags/[0-9]+.[0-9]+.[0-9]+$ ]]; then
+            suffix="dev+${{ github.sha }}"
+            jq ".version = .version + \"$suffix\"" jsr.json > jsr.json.tmp
+            mv jsr.json.tmp jsr.json
+          fi
+      - run: npx jsr publish --allow-dirty
+        working-directory: "@planetarium/lib9c"
