--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -59,7 +59,7 @@ jobs:
         working-directory: "@planetarium/lib9c"
         run: |
           if [[ ! "$GITHUB_REF" =~ ^refs/tags/[0-9]+.[0-9]+.[0-9]+$ ]]; then
-            suffix="dev+${{ github.sha }}"
+            suffix="-dev+${{ github.sha }}"
             jq ".version = .version + \"$suffix\"" jsr.json > jsr.json.tmp
             mv jsr.json.tmp jsr.json
           fi
