--- a/.Lib9c.Tests/Lib9c.Tests.csproj
+++ b/.Lib9c.Tests/Lib9c.Tests.csproj
@@ -59,4 +59,8 @@
     <ProjectReference Include="..\Lib9c.DevExtensions\Lib9c.DevExtensions.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="TableData\AdventureBoss\" />
+  </ItemGroup>
+
 </Project>
