--- a/Lib9c/Lib9c.csproj
+++ b/Lib9c/Lib9c.csproj
@@ -22,7 +22,6 @@
   <ItemGroup>
     <PackageReference Include="DecimalMath.DecimalEx" Version="1.0.2" />
     <PackageReference Include="OptimizedPriorityQueue" Version="4.2.0" />
-    <PackageReference Include="Pyroscope" Version="0.8.14" />
     <PackageReference Include="Serilog" Version="2.10.0" />
     <PackageReference Include="SonarAnalyzer.CSharp" Version="8.38.0.46746">
       <IncludeAssets>runtime; build; native; contentfiles; analyzers</IncludeAssets>
@@ -30,6 +29,8 @@
     </PackageReference>
     <PackageReference Include="System.Reactive" Version="4.3.2" />
     <PackageReference Include="CsvHelper" Version="15.0.5" />
+    <!-- Include Pyroscope only if not building for Unity -->
+    <PackageReference Include="Pyroscope" Version="0.8.14" Condition="'$(UNITY)' == ''" />
   </ItemGroup>
 
   <ItemGroup>
