--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -87,12 +87,17 @@ jobs:
       - uses: pnpm/action-setup@v4
         with:
           version: 9
-          run_install: true
+          run_install: |
+            recursive: true
+            cwd: "@planetarium"
       - name: Build Lib9c.Tools
         run: dotnet build .Lib9c.Tools/Lib9c.Tools.csproj
       - run: pnpm -r build
+        working-directory: "@planetarium/lib9c"
       - run: pnpm -r fmt:ci
+        working-directory: "@planetarium/lib9c"
       - run: pnpm -r test
+        working-directory: "@planetarium/lib9c"
 
   release:
     if: github.ref_type == 'tag' && startsWith(github.ref_name, 'v')
