publish Lib9c.MessagePack

--- a/Lib9c.MessagePack/Lib9c.MessagePack.csproj
+++ b/Lib9c.MessagePack/Lib9c.MessagePack.csproj
@@ -8,6 +8,7 @@
     <Platforms>AnyCPU</Platforms>
     <OutputPath>.bin</OutputPath>
     <IntermediateOutputPath>.obj</IntermediateOutputPath>
+    <VersionPrefix>1.16.0</VersionPrefix>
   </PropertyGroup>
 
   <ItemGroup>
