--- a/Lib9c.Renderers/Lib9c.Renderers.csproj
+++ b/Lib9c.Renderers/Lib9c.Renderers.csproj
@@ -6,6 +6,7 @@
     <Nullable>enable</Nullable>
     <OutputPath>.bin</OutputPath>
     <IntermediateOutputPath>.obj</IntermediateOutputPath>
+    <VersionPrefix>1.16.0</VersionPrefix>
     <RootNamespace>Lib9c</RootNamespace>
   </PropertyGroup>
 
