--- a/.github/workflows/publish-docs.yml
+++ b/.github/workflows/publish-docs.yml
@@ -23,7 +23,7 @@ jobs:
           dotnet-version: 6.0.400
 
       - run: dotnet restore
-      - run: dotnet tool update -g docfx
+      - run: dotnet tool restore
       - run: docfx docs/docfx.json
 
       - name: deploy
