--- a/.Lib9c.Benchmarks/Lib9c.Benchmarks.csproj
+++ b/.Lib9c.Benchmarks/Lib9c.Benchmarks.csproj
@@ -17,12 +17,12 @@
 
     <ItemGroup>
       <ProjectReference Include="..\.Lib9c.Tests\Lib9c.Tests.csproj" />
-      <ProjectReference Include="..\.Libplanet\src\Libplanet.RocksDBStore\Libplanet.RocksDBStore.csproj" />
-      <ProjectReference Include="..\.Libplanet\src\Libplanet\Libplanet.csproj" />
+      <ProjectReference Include="$(LibplanetDirectory)src\Libplanet.RocksDBStore\Libplanet.RocksDBStore.csproj" />
+      <ProjectReference Include="$(LibplanetDirectory)src\Libplanet\Libplanet.csproj" />
       <ProjectReference Include="..\Lib9c\Lib9c.csproj" />
       <ProjectReference Include="..\Lib9c.Policy\Lib9c.Policy.csproj" />
       <ProjectReference Include="..\Libplanet.Crypto.Secp256k1\Libplanet.Crypto.Secp256k1.csproj" />
-      <ProjectReference Include="..\.Libplanet\test\Libplanet.Mocks\Libplanet.Mocks.csproj" />
+      <ProjectReference Include="$(LibplanetDirectory)test\Libplanet.Mocks\Libplanet.Mocks.csproj" />
     </ItemGroup>
 
     <ItemGroup>
