--- a/Lib9c.DevExtensions/Lib9c.DevExtensions.csproj
+++ b/Lib9c.DevExtensions/Lib9c.DevExtensions.csproj
@@ -10,9 +10,9 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\.Libplanet\src\Libplanet.RocksDBStore\Libplanet.RocksDBStore.csproj" />
-    <ProjectReference Include="..\.Libplanet\src\Libplanet.Stun\Libplanet.Stun.csproj" />
-    <ProjectReference Include="..\.Libplanet\src\Libplanet\Libplanet.csproj" />
+    <ProjectReference Include="$(LibplanetDirectory)src\Libplanet.RocksDBStore\Libplanet.RocksDBStore.csproj" />
+    <ProjectReference Include="$(LibplanetDirectory)src\Libplanet.Stun\Libplanet.Stun.csproj" />
+    <ProjectReference Include="$(LibplanetDirectory)src\Libplanet\Libplanet.csproj" />
     <ProjectReference Include="..\Lib9c\Lib9c.csproj" />
     <ProjectReference Include="..\Lib9c.Policy\Lib9c.Policy.csproj" />
   </ItemGroup>
