--- a/Lib9c.Proposer/Lib9c.Proposer.csproj
+++ b/Lib9c.Proposer/Lib9c.Proposer.csproj
@@ -10,7 +10,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Lib9c\Lib9c.csproj" />
-    <ProjectReference Include="..\.Libplanet\src\Libplanet.Net\Libplanet.Net.csproj" />
+    <ProjectReference Include="$(LibplanetDirectory)src\Libplanet.Net\Libplanet.Net.csproj" />
   </ItemGroup>
 
 </Project>
