--- a/.github/workflows/publish-docs.yml
+++ b/.github/workflows/publish-docs.yml
@@ -24,7 +24,7 @@ jobs:
 
       - run: dotnet restore
       - run: dotnet tool restore
-      - run: docfx docs/docfx.json
+      - run: dotnet docfx docs/docfx.json
 
       - name: deploy
         uses: peaceiris/actions-gh-pages@v4
