deploy: ebf3d8a609d9654fc629cdf6b3320821769f85ba

--- a/development/manifest.json
+++ b/development/manifest.json
@@ -11077,6 +11077,52 @@
     },
     {
       "type": "Conceptual",
+      "source_relative_path": "contributing/documentation/deployment.md",
+      "output": {
+        ".html": {
+          "relative_path": "contributing/documentation/deployment.html"
+        }
+      },
+      "version": ""
+    },
+    {
+      "type": "Conceptual",
+      "source_relative_path": "contributing/documentation/structure.md",
+      "output": {
+        ".html": {
+          "relative_path": "contributing/documentation/structure.html"
+        }
+      },
+      "version": ""
+    },
+    {
+      "type": "Toc",
+      "source_relative_path": "contributing/documentation/toc.yml",
+      "output": {
+        ".json": {
+          "relative_path": "contributing/documentation/toc.json"
+        },
+        ".html": {
+          "relative_path": "contributing/documentation/toc.html"
+        }
+      },
+      "version": ""
+    },
+    {
+      "type": "Toc",
+      "source_relative_path": "contributing/toc.yml",
+      "output": {
+        ".json": {
+          "relative_path": "contributing/toc.json"
+        },
+        ".html": {
+          "relative_path": "contributing/toc.html"
+        }
+      },
+      "version": ""
+    },
+    {
+      "type": "Conceptual",
       "source_relative_path": "index.md",
       "output": {
         ".html": {
