--- a/.Lib9c.Plugin.Shared/Lib9c.Plugin.Shared.csproj
+++ b/.Lib9c.Plugin.Shared/Lib9c.Plugin.Shared.csproj
@@ -6,4 +6,37 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\.Libplanet\src\Libplanet.Action\Libplanet.Action.csproj">
+      <Private>false</Private>
+      <ExcludeAssets>runtime</ExcludeAssets>
+    </ProjectReference>
+
+    <ProjectReference Include="..\.Libplanet\src\Libplanet\Libplanet.csproj">
+      <Private>false</Private>
+      <ExcludeAssets>runtime</ExcludeAssets>
+    </ProjectReference>
+    <ProjectReference Include="..\.Libplanet\src\Libplanet.Types\Libplanet.Types.csproj">
+      <Private>false</Private>
+      <ExcludeAssets>runtime</ExcludeAssets>
+    </ProjectReference>
+    <ProjectReference Include="..\.Libplanet\src\Libplanet.Common\Libplanet.Common.csproj">
+      <Private>false</Private>
+      <ExcludeAssets>runtime</ExcludeAssets>
+    </ProjectReference>
+
+    <ProjectReference Include="..\.Libplanet\src\Libplanet.Crypto\Libplanet.Crypto.csproj">
+      <Private>false</Private>
+      <ExcludeAssets>runtime</ExcludeAssets>
+    </ProjectReference>
+    <ProjectReference Include="..\.Libplanet\src\Libplanet.Store\Libplanet.Store.csproj">
+      <Private>false</Private>
+      <ExcludeAssets>runtime</ExcludeAssets>
+    </ProjectReference>
+    <PackageReference Include="Bencodex" Version="0.16.0">
+      <Private>false</Private>
+      <ExcludeAssets>runtime</ExcludeAssets>
+    </PackageReference>
+  </ItemGroup>
+
 </Project>
