--- a/feature/summon-100/manifest.json
+++ b/feature/summon-100/manifest.json
@@ -822,6 +822,16 @@
     },
     {
       "type": "ManagedReference",
+      "source_relative_path": "api/Nekoyume.Action.CostumeSummon.yml",
+      "output": {
+        ".html": {
+          "relative_path": "api/Nekoyume.Action.CostumeSummon.html"
+        }
+      },
+      "version": ""
+    },
+    {
+      "type": "ManagedReference",
       "source_relative_path": "api/Nekoyume.Action.Coupons.IssueCoupons.yml",
       "output": {
         ".html": {
