deploy: 2acbcfeefeefea625e99a7adcaae86c5085eac9b

--- a/feature/growth12/manifest.json
+++ b/feature/growth12/manifest.json
@@ -2952,6 +2952,16 @@
     },
     {
       "type": "ManagedReference",
+      "source_relative_path": "api/Nekoyume.Action.Synthesize.yml",
+      "output": {
+        ".html": {
+          "relative_path": "api/Nekoyume.Action.Synthesize.html"
+        }
+      },
+      "version": ""
+    },
+    {
+      "type": "ManagedReference",
       "source_relative_path": "api/Nekoyume.Action.TotalSupplyDoesNotExistException.yml",
       "output": {
         ".html": {
