deploy: 28230d59084aefa014417f2c6aaf9f5aa5f59905

--- a/feature/summon-100/manifest.json
+++ b/feature/summon-100/manifest.json
@@ -3932,6 +3932,16 @@
     },
     {
       "type": "ManagedReference",
+      "source_relative_path": "api/Nekoyume.Helper.SummonHelper.yml",
+      "output": {
+        ".html": {
+          "relative_path": "api/Nekoyume.Helper.SummonHelper.html"
+        }
+      },
+      "version": ""
+    },
+    {
+      "type": "ManagedReference",
       "source_relative_path": "api/Nekoyume.Helper.WorldBossHelper.yml",
       "output": {
         ".html": {
